# FEM-program

./: .gitignore  CMakeLists.txt  CMakePresets.json  compile_commands.json  main.cpp
.cache/clangd/index/: PlateMaterial.cpp.FCB21809D0B7933D.idx  PlateMaterial.h.5482BFD123A482AF.idx  context.c.CD54257172FFC0E4.idx  displacement.cpp.4FA0156AE6F43379.idx  displacement.cpp.81D52CA3A9A6759B.idx  displacement.h.AF0A336D91166617.idx  displacement.h.DDAA07603A1975FC.idx  egl_context.c.D393BAE7C891DCD6.idx  element.cpp.248BE394AC3AA397.idx  element.cpp.D275AEB1A857308D.idx  element.h.1DA4F3EADEADA0B7.idx  element.h.C3DCEB275362ADA8.idx  elementprovider.cpp.3B040AEDE1DC4FFA.idx  elementprovider.h.7ED3ADC609021F8D.idx  femdisplacement.cpp.DF329801EBA4CDD5.idx  femdisplacement.h.AE374E958B35FDB3.idx  femelement.cpp.07D4CE44EAAF4823.idx  femelement.h.32C1979F3F3869C1.idx  femload.cpp.9F0E0E24AB238B34.idx  femload.h.262BE0036A3AC645.idx  femtypes.h.A670558F85E10F81.idx  glad.c.42C6DE814F501CC1.idx  glad.h.6D14104A594FBA16.idx  glfw.cpp.11B710FE59782147.idx  glfw.h.482A08940E1A9075.idx  glfw3.h.84FDC1B6E446DB47.idx  glfw3native.h.6CC8F36E9BEDB640.idx  glx_context.c.AE9E4FD1F91246A2.idx  init.c.F4816FC5C21104BC.idx  input.c.7291B1801A7948AF.idx  internal.h.E08364D03BF41667.idx  khrplatform.h.C10EB26569F6CC62.idx  linux_joystick.c.632B4C39D6E7B887.idx  linux_joystick.h.9A8C89F76AF95A06.idx  load.cpp.126918316A79F02C.idx  load.cpp.3850356573722257.idx  load.h.B4515BAD084D1260.idx  load.h.E5E1E85CFAF18ED8.idx  main.cpp.4F9001E0CA4E155C.idx  mainwindow.cpp.980B2FE9B46A3BF3.idx  (+48 more)
src/app/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h
src/app/context-menu/: treeContextMenu.cpp  treeContextMenu.h
src/elements/: element.cpp  element.h  elementprovider.cpp  elementprovider.h  femelement.cpp  femelement.h  femtypes.h  node.h
src/elements/displacement/: displacement.cpp  displacement.h  femdisplacement.cpp  femdisplacement.h
src/elements/load/: femload.cpp  femload.h  load.cpp  load.h
src/elements/plates/: plates.cpp  plates.h
src/generalElement/: element.cpp  element.h
src/generalElement/plates/: plate.cpp  plate.h
src/graphics/: CMakeLists.txt
src/graphics/include/: glfw.h
src/graphics/qtgl/: qtgl.cpp  qtgl.h
src/graphics/src/: glfw.cpp
src/mesh/: mesh.cpp  mesh.h  meshdata.h
src/solver/: solver.cpp  solver.h
